--- a/Pipfile
+++ b/Pipfile
@@ -1,15 +1,13 @@
 [[source]]
-
 url = "https://pypi.python.org/simple"
 verify_ssl = true
 name = "pypi"
 
+[requires]
+python_version = "3.6"
 
 [packages]
-
 requests = "*"
 pillow = "*"
 
-
 [dev-packages]
-
