--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,6 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "3.2.8", features = ["derive"] }
+futures = "0.3.21"
+rspotify = "0.11.5"
+tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
